# db-design-copilot

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
apps/api/: deps.py  main.py
apps/api/rag/: chunker.py  embeddings.py  ingest.py  prompts.py  schema.sql  search.py  store.py
apps/api/tests/: test_chunker.py  test_search_contract.py
knowledge/courses/: 01-glossary.md  02-entity-association.md  03-functional-dependencies.md  04-matrices.md  05-normal-forms.md  06-sql-ddl.md
